# hw06-mjmilazzo

./: .buildinfo  Makefile  README.html  README.md  _config.yml  conf.py  genindex.html  hw06-description.html  index.html  index.ipynb  objects.inv  postBuild  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.doctrees/readligo/: intro.doctree
.github/workflows/: book27.yml
_sources/: index.ipynb
data/: GW150914_data.csv
ligotools/: pyproj.toml  setup.cfg  utils.py
ligotools/.pytest_cache/: README.html
ligotools/src/ligotools/: __init__.py  utils.py
ligotools/src/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: __init__.py  test_readligo.py  test_utils.py
make_scripts/: envsetup.sh
readligo/: intro.html
scripts/: envsetup.sh
